Completed session based authentication store sessions